[gd_scene load_steps=6 format=2]

[ext_resource path="res://interfaz.gd" type="Script" id=1]
[ext_resource path="res://Kabouter DEMO.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="lblScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.5
margin_right = 96.5
margin_bottom = 130.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="lblMensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.449
margin_top = -278.257
margin_right = 194.551
margin_bottom = -148.257
custom_fonts/font = SubResource( 2 )
text = "MOSQUIKILL"
align = 1
valign = 1

[node name="btnPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -90.0
margin_right = 100.0
custom_fonts/font = SubResource( 3 )
text = "JUGAR"

[node name="mensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="timeout" from="mensajeTimer" to="." method="_on_mensajeTimer_timeout"]
